Added HTML and CSS  IMAGES files

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
         <div class="logo"><img src="images/download-removebg-preview.png" alt="BOEING"></div>
         <Nav>
             <ul>
-                <li><a href="https://www.boeing.co.in/">Home</a></li>
-                <li><a href="https://www.boeing.com/company#general-information">About</a></li>
-                <li><a href="https://www.boeing.co.in/products-and-services">Product</a></li>
-                <li><a href="https://www.boeing.com/safety">safety</a></li>
-                <li><a href="https://www.boeing.com/contact-us">contact-us</a></lia>
+                <li><a href="https://www.boeing.co.in/"><img src="images/a88a8cd82ccd942fe3593d73fc1fb8f7.jpg"alt='Home'width="20">Home</a></li>
+                <li><a href="https://www.boeing.com/company#general-information"><img src="images/about.jpg"alt="About" width="20">About</a></li>
+                <li><a href="https://www.boeing.co.in/products-and-services"><img src="images/Icon_for_Wikipedia.png"alt="Product" width="20">Product</a></li>
+                <li><a href="https://www.boeing.com/safety"><img src="images/safety.png"alt="Safety" width="20">Safety</a></li>
+                <li><a href="https://www.boeing.com/contact-us"><img src="images/contact.png"alt=Contact-Us" width="20">Contact-Us</a></li>
+                <li><a href="https://shop.boeing.com/aviation-supply/login"><img src="images/sign in.png"alt="Sign-In" width="20">Sign-In</a></li>
             </ul>
         </Nav>
     </header>
     <section class="hero" >
-        <h1>Innovating The Future Off Fight</h1>
+        <h1>Delivering The Future,Today</h1>
         <p>explore our latest aircraft models and technologies</p>
         <a href="https://www.boeing.com/company/general-info#overviews" class="btn">learn more</a>
     </section>
@@ -64,12 +65,12 @@
                 <a href="https://onfirstup.com/boeing/BNN/articles/x-66-model-breezes-through-1st-wind-tunnel-tests?bypass_deeplink=true"><img src="images/boeing news.jpeg" alt="Boeing news"></a>
                 <p>Boeing News</p>
             </div>
+            
         </div>
-
-
         
     </section>
     <footer>
+        <p>Site Terms|Privacy and Cookie Statement|Ad choices|Cookies Settings</p>
         <p>&copy;2025 Boeing.all Rights Reserved.</p>
     </footer>
 </body>
